--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: enabled
 script:
 - echo $TRAVIS_BUILD_ID
 - cat ./README.md 
-- chmod +x ./README.md 
+- chmod  +x ./test_trigger.sh
 - ./test_trigger.sh
 
 
